--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            
-        </title>
-    </head>
-    <body>
-        {% for post in posts %}
-        <h1>Title: {{post.title}}</h1>
-        <h1>Author: {{post.author}}</h1>
-        <h1>Date Posted: {{post.date_posted}}</h1>
-        <h1>Content: {{post.content}}</h1>
-        {% endfor %}
-    </body>
-</html>
+{% extends 'blog/base.html' %}
+{% block content %}
+{% for post in posts %}
+<h1>Title: {{post.title}}</h1>
+<p>By {{post.author}} on {{post.date_posted}}</p>
+<p>{{post.content}}</p>
+{% endfor %}
+{% endblock content %}
