--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,24 +1,24 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
-{%block content%}
+{% block content %}
 <div class='content-section'>
     <form method="POST">
         {% csrf_token %}
         <fieldset class='form-group'>
             <legend class="border-bottom mb-4">
-                Join Today
+                Log In
             </legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">
-                Sign Up
+                Log In
             </button>
         </div>
     </form>
     <div class='border-top pt-3'>
         <small class="text-muted">
-            Already Have An Account? <a class='ml-2' href="{% url 'login'%}">Login In</a>
+            Need An Account? <a class='ml-2' href="{% url 'register'%}">Sign Up Now</a>
         </small>
     </div>
 </div>
